Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2848

Inconsistent adding of gdb versions

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • None
    • Qt Creator 2.1.0-rc1
    • Debugger
    • Windows Vista x64
      Qt Creator 2.0.93 (2.1.0-rc1) 0d5211cc45
    • c717c1f9c70fe9b5308f13f0b614de37bf1aa4da

      1. Start Creator.
      2. Open Options dialog, Debugger, Gdb. Remove all entered versions of gdb. Click OK.
      3. Restart Creator.
      4. Open Options dialog, Debugger, Gdb. Now the gdb versions from Creator's installation directory show up.

      So far this is a nice feature. Unfortunately, there are some inconsistencies:

      • Set a gdb for Symbian from a different directory and check GCCE only.
        gdb for Symbian from installation directory will be added with all Symbian toolchains checked - so two debuggers are set for GCCE. Which of these will be used?
      • Having set versions for Symbian and desktop only, a version for Maemo will be added. When gdb versions for Maemo and desktop are set only, a version for Symbian will not be added.
      • A gdb for debugging desktop applications seems to be added only if no gdb is entered.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes