Debugger: Suppress inconsistencies in gdb binary settings.

caused by the merging of global settings.
Terminate list of binaries by an empty element to prevent
accidental reading of consecutive keys.
Add Linux-ICC to list of toolchains for gdb.

Acked-by: hjk
Reviewed-by: Daniel Molkentin <daniel.molkentin@nokia.com>
Task-number: QTCREATORBUG-2848